# plumb

./: .gitignore  .nf-core.yml  CHANGELOG.md  CITATIONS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  main.nf  modules.json  modules.nf  nextflow.config  nextflow_schema.json  ro-crate-metadata.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: awsfulltest.yml  awstest.yml  branch.yml  ci.yml  fix-linting.yml
archive/: main.nf
assets/: adaptivecard.json  email_template.html  email_template.txt  schema_input.json  sendmail_template.txt  slackreport.json
conf/: base.config  test.config  test_full.config
docs/: README.md  output.md  usage.md
pkg/: README.md  env.yaml  pyproject.toml
pkg/docs/: developer.md
pkg/src/plumbdb/: cli.py  oespruce.py
pkg/src/plumbdb/tests/: test_plumb.py
rough-drafts/: 00_process_bindingdb.py  00_test_process_bindingdb.sh  01_download_pdb.py  01_test_download_pdb.sh  02_prep_cif.py  02_prep_cif.sh  03_prep_for_docking.sh  04_assess_prepped_protein.py  04_assess_prepped_protein.sh  05_run_fecs.sh  README.md
rough-drafts/20250324_initial_scripts/: 00_process_bindingdb.py  00_run_pipeline.sh  00_test_process_bindingdb.sh  01_test_download_pdb.sh  02_prep_cif.py  02_prep_cif.sh  03_prep_for_docking.sh  04_assess_prepped_protein.ipynb  04_assess_prepped_protein.sh  05_generate_constrained_ligand_poses.sh  06_make_fec_inputs.sh  README.md  (+1 more)
test_execution/: slurm-17226799.out  test_process_bindingdb.sh
workflows/: plumb.nf
(+23 files in other folders)
